--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <p><strong>Business Problem:</strong> Executives lacked a unified lens across cost, utilization, and performance metrics, resulting in fragmented insights, delayed decisions, and missed affordability opportunities.</p>
           <p><strong>Solution:</strong> Unified executive benchmarking dashboard providing leadership visibility into enterprise performance, utilization, and cost trends.</p>
           <ul>
-            <li><strong>Scope:</strong> Six analytic blocks covering Top Condition Trends (unit cost and volume), Inpatient Trend Monitoring, Case/Disease Management Performance, UM mMtrics, Trend vs CoC Portfolio, and Executive Headlines & Focus Signals.</li>
+            <li><strong>Scope:</strong> Six analytic blocks covering Top Condition Trends (unit cost and volume), Inpatient Trend Monitoring, Case/Disease Management Performance, UM Metrics, Trend vs CoC Portfolio, and Executive Headlines & Focus Signals.</li>
             <li><strong>Impact:</strong> Eliminated fragmented reporting and reduced decision latency through centralized Power BI views.</li>
             <li><strong>Collaboration:</strong> Partnered with Affordability, Clinical, and Strategy leaders to define roadmap and success measures for aligning governance, analytics, and interventions and adoption.</li>
             <li><strong>Outcome:</strong> Drove enterprise alignment on performance signals, reducing duplicative analytics efforts, and highlighted underperforming programs and redirected investments to high-impact initiatives.</li>
