--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
   <section id="about">
     <div class="container">
       <h2 style="color:var(--hunter-dark)">About Me</h2>
-      <p class="lead" style="margin-top:8px">I'm a strategic and data-driven Product Manager with over 15 years in healthcare analytics and population health. My work focuses on connecting strategy to scalable execution, turning complex data ecosystems into actionable insights for leaders, clinicians, and analysts. I specialize in building analytics products that simplify the delivery of value-based care and drive measurable business outcomes.</p>
-      <p style="margin-top:8px">With experience leading cross-functional teams across data engineering, analytics, and clinical operations, I bridge the gap between technology and impact. I thrive at the intersection of design, storytelling, and analytics, ensuring that the right people get the right information at the right time. My portfolio reflects a passion for creating clarity, fostering adoption, and building solutions that endure.</p>
+      <p class="lead" style="margin-top:8px">I build products that make healthcare data human. My portfolio reflects years of translating complexity into clarity, turning scattered datasets into platforms that empower people to make better decisions. Each solution displayed was designed to help organizations see their members differently, not as data points, but as people whose health stories drive smarter action. I'm deeply motivated by connection, between data and purpose, technology and empathy, design and impact. I thrive where analytics meets storytelling, helping teams uncover the "why" behind the numbers and align around it.</p>
+      <p style="margin-top:8px">Beyond product strategy, I'm a mentor, music enthusiast, world traveler, and advocate for education and equity. Music and mentorship keep me grounded in rhythm and empathy, the same qualities that guide how I design products: with flow, intention, and a human pulse.</p>
     </div>
   </section>
 
