--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
       <div style="margin-top:20px;display:flex;flex-wrap:wrap;gap:10px">
         <a class="btn primary" href="#about">About</a>
         <a class="btn primary" href="#portfolio">Portfolio</a>
+        <a class="btn primary" href="https://drive.google.com/file/d/1DDeIMi_haOMjZ3-_FA1R_eWkSWhoIw0A/view?usp=drive_link">Playbook</a>
         <a class="btn primary" href="https://www.linkedin.com/in/jessica-magana-dba-mshi-53451149" target="_blank">LinkedIn</a>
+        <a class="btn primary" href="mailto:daffron_16@hotmail.com?subject=Portfolio Inquiry">Email Me</a>
         <a class="btn primary" href="https://drive.google.com/file/d/1o1e66561Y9ROxxMNjiH7Eh3Xk0fEVdN3/view?usp=drive_link" download>Download Resume </a>
       </div>
   </section>
